2004-12-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* flumotion/admin/admin.py:
	* flumotion/common/common.py:
	* flumotion/common/component.py:
	* flumotion/common/worker.py:
	* flumotion/manager/admin.py:
	* flumotion/manager/component.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_common_component.py:
	* flumotion/test/test_flavors.py:
	* flumotion/twisted/Makefile.am:
	* flumotion/twisted/flavors.py:
	  add flavors with StateCacheable/RemoteCache
	  add unittests
	  add possibility of monitoring lists and having append/remove
	  listener calls

2004-12-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/common/Makefile.am:
	* flumotion/common/common.py:
	* flumotion/common/component.py:
	* flumotion/manager/admin.py:
	* flumotion/manager/component.py:
	* flumotion/manager/worker.py:
	* flumotion/test/test_common.py:
	* flumotion/test/test_common_component.py:
	* flumotion/test/test_wizard.py:
	* flumotion/wizard/wizard.py:
	  First pass at making state of the workerHeaven cacheable.
	  Needs some reorganization and tests of State objects.

2004-12-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/admin.glade:
	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/component/consumers/httpstreamer/admin_gtk.py:
	  create a status bar class wrapping the GTK widget
	  use the status bar for showing info about the UI

2004-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/wizard_testsource.glade:
	  don't use F for key access
	* flumotion/manager/admin.py:
	* flumotion/manager/common.py:
	* flumotion/manager/component.py:
	* flumotion/manager/main.py:
	* flumotion/manager/manager.py:
	* flumotion/manager/worker.py:
	  cleanup of INFO level

2004-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/image/Makefile.am:
	* data/image/mood-happy.png: