@@ -1,5 +1,15 @@
 2004-12-30  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* flumotion/manager/Makefile.am:
+	* flumotion/manager/admin.py:
+	* flumotion/manager/common.py:
+	* flumotion/manager/component.py:
+	* flumotion/manager/manager.py:
+	* flumotion/manager/worker.py:
+	  rename common to base since that's what it is
+
+2004-12-30  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* Makefile.am:
 	* flumotion/admin/admin.py:
 	* flumotion/common/common.py:
